--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "5",
     "morgan": "^1.10.0",
     "slugify": "^1.6.5",
