--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^7.0.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "5",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.3",
     "slugify": "^1.6.5",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "ndb": "^1.1.5"
